<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coffeebg4"
        android:scaleType="centerCrop"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@drawable/coffee3"
        android:scaleType="centerCrop"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:background="@drawable/topbox"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <pl.droidsonroids.gif.GifTextView
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:background="@drawable/cof_animation2"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_below="@+id/layout1"
            android:layout_width="330dp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:drawableLeft="@drawable/user"
            android:background="@drawable/input_box"
            android:drawablePadding="20dp"
            android:textSize="18dp"
            android:textColor="#FF50260F"
            android:hint="@string/name"
            android:inputType="textPersonName|textAutoComplete|textCapWords" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_below="@+id/layout2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/box">



        <pl.droidsonroids.gif.GifTextView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_margin="15dp"
            android:background="@drawable/cof_white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="#FF50260F"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whipping_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/cream"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:padding="24dp"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/chocolate"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:padding="24dp"
            android:text="@string/chocolate" />
        <CheckBox
            android:id="@+id/sugar_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sugar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:padding="24dp"
            android:text="@string/sugar" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_below="@+id/layout3"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:background="@drawable/box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:textColor="#FF50260F"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:background="@drawable/remove"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:background="@drawable/add"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/order_price_name"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₦0.00"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <Button
            android:id="@+id/activity_main_btn_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:background="@drawable/endbutton"
            android:textColor="#fff"
            android:onClick="submitOrder"
            android:textAllCaps="true"
            android:text="@string/order" />

    </LinearLayout>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>